RegressionTests/TestSuiteExport/reject/return_outside_function.blade
// EXPECT: fail
// DIAGNOSTICS: ReturnOutsideFunction

cog task main() {
    return 1;
}